kubernetes/infrastructure/golinky/golinky-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golinky
spec:
  ingressClassName: tailscale
  rules:
    - host: home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: golinky
                port:
                  number: 80
  tls:
    - hosts:
        - home
